--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "monaco-editor": "^0.48.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^4.2.7",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.8",
